--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-paystack": "^4.0.3",
     "react-to-print": "^2.14.7",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
