--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "luxon": "^3.4.3",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "next": "12.2.0",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.3",
     "react-paystack": "^4.0.3",
     "react-to-print": "^2.14.7",
     "styled-components": "^5.3.5"
