--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_URL=https://jesseremedies.up.railway.app/api
+# API_URL=https://jesseremedies.up.railway.app/api
+API_URL=http://localhost:1337/api
