--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # API_URL=https://jesseremedies.up.railway.app/api
-API_URL=http://localhost:1337/api
+NEXT_PUBLIC_API_URL=https://jesseremedies.com.ng/api
+NEXT_PUBLIC_PAYSTACK_KEY=sk_live_19fb1c95c6cf69c4b77ee4614d1d3276c86859b7
